library/src/libqabstractanimation.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QAnimationDriver QAnimationDriver;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
QAnimationDriver* QAnimationDriver_new();
QAnimationDriver* QAnimationDriver_new2(QObject* parent);
QMetaObject* QAnimationDriver_MetaObject(const QAnimationDriver* self);
void* QAnimationDriver_Metacast(QAnimationDriver* self, const char* param1);
int QAnimationDriver_Metacall(QAnimationDriver* self, int param1, int param2, void** param3);
libqt_string QAnimationDriver_Tr(const char* s);
void QAnimationDriver_Advance(QAnimationDriver* self);
void QAnimationDriver_Install(QAnimationDriver* self);
void QAnimationDriver_Uninstall(QAnimationDriver* self);
bool QAnimationDriver_IsRunning(const QAnimationDriver* self);
long long QAnimationDriver_Elapsed(const QAnimationDriver* self);
void QAnimationDriver_Connect_Started(QAnimationDriver* self, intptr_t slot);
void QAnimationDriver_Connect_Stopped(QAnimationDriver* self, intptr_t slot);
void QAnimationDriver_Start(QAnimationDriver* self);
void QAnimationDriver_Stop(QAnimationDriver* self);
libqt_string QAnimationDriver_Tr2(const char* s, const char* c);
libqt_string QAnimationDriver_Tr3(const char* s, const char* c, int n);
void QAnimationDriver_AdvanceAnimation(QAnimationDriver* self);
void QAnimationDriver_Delete(QAnimationDriver* self);